# mapserver-templates

./: .gitignore  ApiCatalog.md  CMakeLists.txt  ReadMe.md  api-catalog.json  app.css  data.json  debugging.md  example.html  index.html  isric.html  json.md  landing.html  maps.html  mapserver-templates.cpp  mapserver-templates.vcxproj  output.html  readme.md  template.inja  vcpkg.json
.github/workflows/: build.yml
cgidemo/: index.html
docker/: .dockerignore  Dockerfile  ReadMe.md
docker/runtime/etc/apache2/conf-enabled/: mapserver.conf
isric/: index.html  notes.md  output.html  test.html
kitchensink/: api-catalog.json  index.html
mapfiles/: api-catalog.commented.json  api-catalog.json  cgi.map  kitchensink.map  mapserver-windows.conf  mapserver.conf  oapif.map  ocs.sld  readme.md  template.html  wcs.map  wfs.map  wms.map
mapfiles/data/: ne_110m_land.fgb
mapfiles/kitchensinkdemo/: api-catalog.json
mapfiles/wfsdemo/: api-catalog.json
mapfiles/wmsdemo/: api-catalog.json
mapserver-index/: data.json  header.html  landing.html  output.html  readme.md
mapserver-index/html-bootstrap4/: header.html  landing.html  map.html
oapifdemo/: index.html
scripts/: ReadMe.md  api-catalog-schema.json  services.py  test_request.py  validate.py
src/: main.cpp
wcsdemo/: api-catalog.json
wfsdemo/: index.html
wmsdemo/: api-catalog.json  index.html
